# theta_events

./: .gitignore  CMakeLists.txt  clearpins.sh  hot_pixels.txt  out.txt  pot  testgpio.c  testpin.sh
include/: key.h  rm3100_spi_userspace.h
src/: drdy_off.cpp  drdy_on.cpp  evk4_accumulator.cpp  evk4_kronecker.cpp  evk4_test.cpp  key.cu  poll_drdy.cpp  rm3100_spi_userspace.c  rm3100_test.cpp
